--- a/app/styles/_button.scss
+++ b/app/styles/_button.scss
@@ -5,6 +5,7 @@ $button-primary-color: #fff !default;
 .button {
 	@include button-base;
 	text-transform: uppercase;
+	letter-spacing: .5px;
 	
 	&.primary {
 		color: $button-primary-color;
@@ -12,12 +13,23 @@ $button-primary-color: #fff !default;
 		border-radius: 4px;
 		padding: 15px 25px;
 		transition: all .1s;
-		font-weight: 600;
 		
 		&:hover {
 			background: darken($button-primary-bg-color, 5%);
 			color: #FFF;
 			text-decoration: none;
+		}
+	}
+
+	&.hollow {
+		color: $button-primary-bg-color;
+		background-color: transparent;
+		border: 1px solid $button-primary-bg-color;
+		
+		&:hover {
+			background-color: transparent;
+			color: darken($button-primary-bg-color, 10%);
+			border-color: darken($button-primary-bg-color, 10%);
 		}
 	}
 }
